@@ -833,6 +833,7 @@ struct _LIBSSH2_SESSION
 #define LIBSSH2_STATE_EXCHANGING_KEYS   0x00000001
 #define LIBSSH2_STATE_NEWKEYS           0x00000002
 #define LIBSSH2_STATE_AUTHENTICATED     0x00000004
+#define LIBSSH2_STATE_KEX_ACTIVE        0x00000008
 
 /* session.flag helpers */
 #ifdef MSG_NOSIGNAL
